crowdsec/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crowdsec-dashboard
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`crowdsec.staging.example.org`)
      kind: Rule
      services:
        - name: crowdsec-service
          port: 3000
  tls:
    secretName: example-org-tls
