crowdsec/nfs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-nfs
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crowdsec-nfs
  template:
    metadata:
      labels:
        app: crowdsec-nfs
    spec:
      containers:
        - name: nfs-server
          image: ghcr.io/trexx/docker-nfs-server:latest
          ports:
            - name: nfsv4
              containerPort: 2049
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - "SYS_ADMIN"
          volumeMounts:
            - mountPath: /data
              name: crowdsec-nfs-data
              readOnly: false
            - name: nfs-exports
              mountPath: /var/lib/nfs/etab
              subPath: etab
              readOnly: true
      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
        - name: nfs-exports
          configMap:
            name: crowdsec-nfs-cm
        - name: crowdsec-nfs-data
          persistentVolumeClaim:
            claimName: crowdsec-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-nfs
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 2049
  selector:
    app: crowdsec-nfs
  clusterIP: 10.96.172.222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crowdsec-nfs
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: crowdsec-nfs
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: crowdsec-db
    - podSelector:
        matchLabels:
          app: crowdsec-dashboard-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: crowdsec-db
    - podSelector:
        matchLabels:
          app: crowdsec-dashboard-db
